# sage

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: release.sh
src/: __init__.py  cli.py  tagger.py
src/sage/: __init__.py  cli.py  tagger.py  utils.py
tests/: __init__.py  test_utils.py
