[tool.poetry]
name = "sage"
version = "0.1.5"
description = "Intelligent semantic tagging for markdown files using Claude"
authors = ["Marius Høgli Aasarød <marius@aasarod.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^23.0.0"
click = "^8.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
black = "^23.0.0"
mypy = "^1.0.0"
pytest = "^7.0.0"
types-aiofiles = "^23.0.0"

[tool.poetry.scripts]
sage = "sage.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"